--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -16,10 +16,12 @@
   </route>
 
   -->
-
+  <nav>
+    <application name="@single-spa/navbar"></application>
+  </nav>
   <main>
     <route default>
-      <application name="@single-spa/welcome"></application>
+      <application name="@single-spa/ticket"></application>
     </route>
   </main>
 </single-spa-router>
