--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -17,11 +17,11 @@
 
   -->
   <nav>
-    <application name="@single-spa/navbar"></application>
+    <application name="@cancy-project/navbar"></application>
   </nav>
   <main>
     <route default>
-      <application name="@single-spa/ticket"></application>
+      <application name="@cancy-project/ticket"></application>
     </route>
   </main>
 </single-spa-router>
